# ProductClassify

./: .gitignore  README.md  fixtures.json  pyproject.toml
product_classify/: manage.py
product_classify/agregat/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
product_classify/agregat/migrations/: 0001_initial.py  0002_alter_agregat_agr_alter_agregat_par.py
product_classify/agregat/tests/: test_models.py
product_classify/classes/: admin.py  apps.py  constants.py  forms.py  inlines.py  models.py  urls.py  validators.py  views.py
product_classify/classes/migrations/: 0001_initial.py  0002_alter_classstruct_options.py  0003_parclass_parclass_parclass_pk.py  0004_alter_classstruct_short_name.py  0005_alter_parclass_max_value_alter_parclass_min_value.py  0006_add_my_functions.py  0007_alter_classstruct_base_ei_and_more.py  0008_alter_parclass_num_parclass_parclass_num_gt_zero_and_more.py  (+1 more)
product_classify/core/: mixins.py
product_classify/ei/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  validators.py  views.py
product_classify/enums/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  utils.py  views.py
product_classify/fixtures/: final_dump.json
product_classify/parametr/: admin.py  apps.py  constants.py  forms.py  inlines.py  models.py  urls.py  views.py
product_classify/product_classify/: asgi.py  settings.py  urls.py  wsgi.py
product_classify/products/: admin.py  apps.py  constants.py  forms.py  inlines.py  models.py  urls.py  views.py
product_classify/templates/: base.html
(+60 files in other folders)
